# code-storyteller

./: .env.example  .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: storyteller-example.yml
src/code_storyteller/cli/: main.py
src/code_storyteller/engine/: __init__.py  branch_engine.py  diff_engine.py  map_engine.py  project_engine.py  story_engine.py
src/code_storyteller/export/: __init__.py  card_renderer.py
src/code_storyteller/memory/: __init__.py  db.py
src/code_storyteller/parser/: __init__.py  code_parser.py
src/code_storyteller/templates/: __init__.py  styles.py
src/code_storyteller/web/: __init__.py  app.py
tests/: test_branch_engine.py  test_card_export.py  test_diff_engine.py  test_parser.py  test_project_engine.py  test_story_engine.py
vscode/: CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json
vscode/src/: extension.ts
