[project]
name = "code-storyteller"
version = "0.1.0"
description = "Explain code like a story — with analogies, characters, and narrative"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "anthropic>=0.34",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "click>=8.1",
]

[project.optional-dependencies]
export = ["weasyprint>=60", "pdf2image>=1.17"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
storytell = "code_storyteller.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
